minor spacing fixes

--- a/css/utlities.css
+++ b/css/utlities.css
@@ -85,8 +85,7 @@ a {
   position: relative;
   left: 15vw;
   margin: 0px;
-  margin-top: -2srem;
-  margin-bottom: 3rem;
+  margin-top: -2rem;
   width: max-content;
 
 }
